update index.js and index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,10 +62,10 @@
                         },
                     },
                     y: {
-                        beginAtZero: true, // Start the y-axis at zero
+                        beginAtZero: true,
                         title: {
                             display: true,
-                            text: label // Title for the y-axis
+                            text: label
                         },
                         ticks: {
                           font: {
@@ -77,9 +77,9 @@
                 plugins: {
                     title: {
                         display: true,
-                        text: 'Weather at FISH.me operating area', // Title of the chart
+                        text: 'Weather at FISH.me operating area',
                         font: {
-                            size: 20 // Adjust the font size of the title
+                            size: 20
                         }
                     }
                 }
